unpackaged/objects/Order.object
<CustomObject>
  <fields>
    <fullName>AX_Order_Number__c</fullName>
    <label>ERP Order Number</label>
    <length>40</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Discount_Model__c</fullName>
    <formula>Account.Discount_Model__c + " "+ Account.Discount_Model_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field details the standing discount (if any) on the Account in MOVEX.</inlineHelpText>
    <label>Account Discount Model</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrdersOwned</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Account_Rating__c</fullName>
    <formula>text(Account.Rating)</formula>
    <label>Account Rating</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Record_Type__c</fullName>
    <formula>Case(Account.RecordTypeId ,"01220000000DiSB","Clinical Customer", "01220000000DiSf", "Clinical PROSPECT", "01220000000DZSL", "Lab Customer", "01220000000DZSV", "Lab PROSPECT","OTHER")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_for_Sample_in_AX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account to track sample in AX</description>
    <label>Payer Account</label>
    <lookupFilter>
      <active>true</active>
      <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>DENTSPLY</value>
      </filterItems>
      <filterItems>
        <field>Account.Sub_Account_Type__c</field>
        <operation>equals</operation>
        <value>Sales Rep</value>
      </filterItems>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Internal</value>
      </filterItems>
      <filterItems>
        <field>Account.Sub_Account_Type__c</field>
        <operation>equals</operation>
        <value>Free Goods</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Orders</relationshipLabel>
    <relationshipName>Sample_Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Activity_ID__c</fullName>
    <description>ID from related CFE</description>
    <inlineHelpText>ID from related CFE</inlineHelpText>
    <label>Activity ID</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Add_edit_dealer__c</fullName>
    <formula>HYPERLINK('apex/orderDealerVF?recordId=' + Id, $Label.Add_edit_dealer, "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add/edit distributor</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Allowed_discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allowed discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Allowed_payment_terms_months__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Allowed payment terms (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Amount_of_Samples_for_Sales_Rep__c</fullName>
    <label>Amount of Samples for Sales Rep</label>
    <summarizedField>OrderItem.Value_of_Samples_for_Sales_Rep__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Amount_of_free_of_charge_products__c</fullName>
    <label>Amount of free of charge products</label>
    <summarizedField>OrderItem.Value_of_free_product__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Approval_check_global__c</fullName>
    <defaultValue>"Sales rep"</defaultValue>
    <description>Used for checking if an approval is needed</description>
    <label>Approval check (global)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Sales rep</fullName>
        </value>
        <value>
          <fullName>Regional Sales Manager</fullName>
        </value>
        <value>
          <fullName>Area Sales Manager</fullName>
        </value>
        <value>
          <fullName>National Sales Manager</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Approval_or_Rejection_Notes_to_Rep__c</fullName>
    <label>Approval or Rejection Notes to Rep</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Approvals_Needed__c</fullName>
    <formula>CASE( Status, "Created",
IF( Total_of_Products_on_this_Order__c =0,  Image("/resource/1415991748000/NAOrdersAddProduct", "Add Products", 80,195),

IF(  SIMPLANT_Director_Approval__c =TRUE, IMAGE("/resource/1415307435000/NAApprovalsSIMPLANT", "Additional Approvals Needed - click Submit for Approval to gain approval and submit to Customer Service",80,195),

IF( Regional_Manager_Approval_Required__c =TRUE,
IMAGE("/resource/1415307452000/NAApprovalsRM", "RM Approval Needed - click Submit for Approval and send to Customer Service",80,195),

IF(Waive_Shipping_Charges__c=TRUE,IMAGE("/resource/1415307452000/NAApprovalsRM", "RM Approval Needed - click Submit for Approval and send to Customer Service",80,195),
IMAGE("/resource/1415307396000/NAApprovalsNoApprovalNeeded", 

"No Additional Approvals Needed - click Submit for Approval to gain approval and send to Customer Service",80,195))))),



"Submitted", IMAGE("/resource/1415990458000/NAApprovalsSUBMITTED", "Submitted", 80, 195),"Processing", IMAGE("/resource/1415990458000/NAApprovalsSUBMITTED", "Pending CS Processing",80,195), "On Hold", IMAGE("/resource/1415991296000/NAOrdersONHOLD","On Hold",200,200), "Rejected", Image("/resource/1415991353000/NAOrdersRejected","Rejected",200,200), "Activated", Image("/resource/1415991501000/NAOrdersActivated", "Activated", 80,95),Image("/resource/1415991748000/NAOrdersAddProduct", "Add Products", 80,195))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Status and Approvals</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Area_Director_Approval_Required__c</fullName>
    <formula>AND( Regional_Manager_Approval_Required__c ,  Regional_Manager_Approved__c =TRUE, Waive_Shipping_Charges__c = TRUE,
OR( 
TEXT( Shipping_Method__c )="UFJ: F IntnlPriority: FedEx Intnl Priority Warehouse",

TEXT( Shipping_Method__c )="UPS Next Day end of day - UXC $20.50",

TEXT( Shipping_Method__c )="UPS Saturday 10:30am - UXH $49.50",

TEXT( Shipping_Method__c )="UPS COD Next Day 10:30 AM: UX2",

TEXT( Shipping_Method__c )="UPS COD Next Day PM: UX3",

TEXT( Shipping_Method__c )="UPS COD 2nd Day PM:  UX5",

TEXT( Shipping_Method__c )="UPS Next Day 10:30am - UXB $27.00",

TEXT( Shipping_Method__c )="FedEx Next Day 10:30am - UFB $27.00",

TEXT( Shipping_Method__c )="FedEx Next Day end of day - UFC $20.50",

TEXT( Shipping_Method__c )="FedEx Next Day Early AM - 6-8:30am - UFA $49.50",

TEXT(Shipping_Method__c )="FedEx Saturday 10:30am - UFH $49.50"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Director Approval Required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Areas_Director_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Areas Director Approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Backorder_Notes__c</fullName>
    <label>Backorder Notes</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>CS_Inbox_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Inbox Approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CS_Inbox_Prospect_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by a workflow on the approval process - if a  prospect needs to have a Movex Customer Created, the NA CS Inbox team creates the Movex Customer in a status 10, adds the Movex Number to the Account iN SFDC, and clicks "Approve"  on the Order to move the Order to the Project Team to release the Movex Customer from Status 10 to 20</description>
    <inlineHelpText>Checked by a workflow on the approval process - if a  prospect needs to have a Movex Customer Created, the NA CS Inbox team creates the Movex Customer in a status 10, adds the Movex Number to the Account iN SFDC, and clicks "Approve"  on the Order</inlineHelpText>
    <label>CS Inbox Prospect Created</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CS_Ownership_Assigned__c</fullName>
    <label>CS Ownership Assigned</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>CS_Proj_Team_Movex_Customer_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by the approval process when the CS Project Team Member releases and merges the movex customer</description>
    <label>CS Proj Team Movex Customer Released</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CS_Project_Team_Member_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Project Team Member Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add the Campaign to which this order should be related</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Commercial_Leader_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Leader approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Commercial_Leader_e_mail__c</fullName>
    <label>Commercial Leader e-mail</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Communication_to_Customer_Service__c</fullName>
    <label>Communication to Customer Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Contact.AccountId</field>
        <operation>equals</operation>
        <valueField>$Source.AccountId</valueField>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Contact_e_mail__c</fullName>
    <formula>Contact__r.Email</formula>
    <label>Contact e-mail</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Count_Bundles__c</fullName>
    <label>Count Bundles</label>
    <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Count_FOC_Products_from_CS__c</fullName>
    <description>Count the number of free of charge products to be send out from the customer service</description>
    <label>Count FOC Products from customer service</label>
    <summaryFilterItems>
      <field>OrderItem.Free_of_Charge_Delivery__c</field>
      <operation>equals</operation>
      <value>Customer Service</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Count_FOC_Products_not_from_dealer__c</fullName>
    <label>Count FOC Products not from dealer</label>
    <summaryFilterItems>
      <field>OrderItem.Free_of_Charge_Delivery__c</field>
      <operation>equals</operation>
      <value>Customer Service, Sales Rep</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Count_Offer_Codes__c</fullName>
    <description>This Roll-Up Summary field counts the OrderItems, which have an Offer Code applied to.</description>
    <label>Count Offer Codes</label>
    <summaryFilterItems>
      <field>OrderItem.Offer_Code_Applied_Number__c</field>
      <operation>greaterThan</operation>
      <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Count_products__c</fullName>
    <label>Count products</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CreatedByName__c</fullName>
    <description>Created to be able to show the created by name in order related list on Account.</description>
    <formula>CreatedBy.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Created_by_My_Direct_Reports__c</fullName>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <label>Created by My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_My_Second_Direct_Reports__c</fullName>
    <description>Created by the users managed by my direct reports</description>
    <formula>IF( CreatedBy.Manager.ManagerId  = $User.Id, True, false)</formula>
    <inlineHelpText>Created by the users managed by my direct reports</inlineHelpText>
    <label>Created by My Second Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_me__c</fullName>
    <description>Dynamic Checkbox that shows if the logged in the user creating the record</description>
    <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
    <label>Created by me</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Credit_Card_Expiration_Date__c</fullName>
    <inlineHelpText>MM/YY</inlineHelpText>
    <label>Credit Card Expiration Date</label>
    <length>5</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
  </fields>
  <fields>
    <fullName>Current_approver_ID__c</fullName>
    <label>Current approver ID</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Credit_Card_Information__c</fullName>
    <label>Customer Credit Card Information</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Alerts__c</fullName>
    <formula>IF(AND( MTF_Evaluation1__c &gt;0, Waive_Shipping_Charges__c =TRUE),  IMAGE("/resource/1416838977000/NAOrdersMTFandShipping", "MTF Check and Shipping Waived",90,250),
if(AND( MTF_Evaluation1__c &gt;0, Waive_Shipping_Charges__c =FALSE), 
 IMAGE("/resource/1416838931000/NAOrdersMTFNotify","Check MTF Documentation",90,250),
IF(AND(MTF_Evaluation1__c =0, Waive_Shipping_Charges__c =TRUE), 
 IMAGE("/resource/1416839015000/NAOrdersShippingWaived","Shipping is waived",30,150),"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Service Alerts</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Date_Time_Completed__c</fullName>
    <label>Customer Service Date/Time Completed</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Email__c</fullName>
    <description>To update the right customer email to be used in the approval process</description>
    <label>Customer Service Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Processing_Time__c</fullName>
    <formula>if( isblank(CS_Ownership_Assigned__c),(ActivatedDate-Customer_Service_Received__c)*24,(ActivatedDate-CS_Ownership_Assigned__c)*24)</formula>
    <label>Customer Service Processing Time (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Received__c</fullName>
    <label>Customer Service Date/Time Received</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Rep_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Rep Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Customer_Type__c</fullName>
    <formula>CASE( Account.RecordTypeId , "01220000000DiSB", IMAGE("/resource/1417017250000/NAOrdersMovexCustomer", "Movex Customer",30,300) ,"01220000000DiSf", IMAGE("/resource/1417017556000/NAOrdersProspectCustomer", "PROSPECT CUSTOMER",30,300),"OTHER")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>$Source.AccountId</field>
        <operation>equals</operation>
        <valueField>Preferred_dealer_item__c.Account__r.Id</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Preferred_dealer_item__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealer_notes__c</fullName>
    <label>Notes to dealer</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Dealer_price_set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer price set</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Direct_Manager__c</fullName>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <label>Direct Manager</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Discount_Approval_Needed__c</fullName>
    <description>For the Approval Process. Determines whether or not this order will need additional approvals. If Greater than 0, the order will need additional manager approval, if not - the order goes straight to Customer Service.</description>
    <label>Discount Approval Needed</label>
    <summarizedField>OrderItem.DiscountApproval_Line_Item__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Discount_to_be_used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contract Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Discounted_Shipping_Type__c</fullName>
    <label>Discounted Shipping Type</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Discounted_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please make note of the discount in "Communication to Customer Service"</inlineHelpText>
    <label>Discounted Shipping</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Distributor_Missing__c</fullName>
    <formula>if(isblank( Distributor__c ), True, False)</formula>
    <label>Distributor Missing</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Distributor_PO_number__c</fullName>
    <label>Distributor PO number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
      <active>false</active>
      <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
      <filterItems>
        <field>Account.RecordType.Id</field>
        <operation>equals</operation>
        <value>01220000000ckje</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordType.Id</field>
        <operation>equals</operation>
        <value>01220000000ckja</value>
      </filterItems>
      <filterItems>
        <field>Account.Name</field>
        <operation>equals</operation>
        <value>4PL Indonesia email delivery test</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Distributor)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Distributor_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor contact</label>
    <lookupFilter>
      <active>true</active>
      <booleanFilter>1 OR 2</booleanFilter>
      <filterItems>
        <field>Contact.AccountId</field>
        <operation>equals</operation>
        <valueField>$Source.Distributor__c</valueField>
      </filterItems>
      <filterItems>
        <field>Contact.FirstName</field>
        <operation>startsWith</operation>
        <value>4PL TESTING CONTACT</value>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Distributor contact)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Distributor_details__c</fullName>
    <label>Distributor details</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Distributor_email__c</fullName>
    <inlineHelpText>Information coming from the Account's General Info Email</inlineHelpText>
    <label>Distributor email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>ERP_Account_Number_on_Contract__c</fullName>
    <label>ERP Account Number on Contract</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ERP_Customer_Number__c</fullName>
    <formula>Account.Movex__c</formula>
    <label>ERP Customer Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Email_Template_ID__c</fullName>
    <formula>if( UserCountryETM__c ="Portugal","00X0J000002PCNE","00X0J000002Wl0Z")</formula>
    <label>Email Template ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>External_notes__c</fullName>
    <label>Notes to the customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>FOC_included__c</fullName>
    <formula>IF( No_of_FOC_rows__c &gt; 0, "Yes", "No")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are free of charge products included?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>FOC_products_delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC products delivered</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Free_Shipping_Required__c</fullName>
    <formula>IF(Total_of_Products_on_this_Order__c = Items_at_100_Discount__c, "Free Shipping Required", "No")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Shipping Required?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Free_of_Charge_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for NA to check if an entire order is an FOC order</description>
    <label>Free of Charge Order</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Global_SFDC_Order__c</fullName>
    <formula>if (contains( RecordType.Name, "global") , True, False)</formula>
    <label>Global SFDC Order</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Item_Description__c</fullName>
    <description>This is used to show ordered products name</description>
    <label>Item Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Items_at_100_Discount__c</fullName>
    <label># Items at 100% Discount</label>
    <summarizedField>OrderItem.Number_of_Items_at_100_Discount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Location__c</fullName>
    <description>Used by the North America Implants Customer Service Team to understand where Orders are in the Approval Process via Order List View</description>
    <formula>IF( ISPICKVAL( Status , "Rejected"), "Rejected - with Rep",

IF( ISPICKVAL( Status , "Activated"), "Complete",

IF( ISPICKVAL( Status , "On Hold"), "ON HOLD",

IF( 
AND(
Submitted_for_Approval__c =FALSE,
ISPICKVAL( Status , "Created")
),
 "District Manager",

IF(Submitted_for_Approval__c =FALSE, "Sales Rep",

IF(
AND(
 total_discount_on_the_order_c__c  &gt;=  0.005,  
Regional_Manager_Approved__c =FALSE
), "Manager Pending",



 "CS Inbox - Order Process"))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>MTF_Evaluation1__c</fullName>
    <label>MTF Evaluation</label>
    <summarizedField>OrderItem.MTF_EvaluationNumber__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Manager_approval_discount__c</fullName>
    <formula>total_discount_on_the_order_c__c -  Allowed_discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager approval discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Movex_Customer_Number__c</fullName>
    <formula>Account.Movex__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movex Customer Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex_Order_Number__c</fullName>
    <label>Movex Order Number</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex_Status__c</fullName>
    <formula>TEXT( Account.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movex Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_Area__c</fullName>
    <formula>Account_Owner__r.NA_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA: Area</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>No_of_FOC_rows__c</fullName>
    <label>No of FOC rows</label>
    <summaryFilterItems>
      <field>OrderItem.Free_of_Charge_Delivery__c</field>
      <operation>notEqual</operation>
      <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Non_SIMPLANT_Items__c</fullName>
    <label>Non-SIMPLANT Items</label>
    <summarizedField>OrderItem.Non_SIMPLANT_Evaluation__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Note_for_canceled_orders__c</fullName>
    <label>Note for canceled orders</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Number_of_product_not_from_DS__c</fullName>
    <formula>Total_of_Products_on_this_Order__c - Count_FOC_Products_not_from_dealer__c</formula>
    <label>Number of product not from DS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Offer_Code__c</fullName>
    <label>Offer Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Account Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Amount_global__c</fullName>
    <formula>(Order_amount_before_disc_globa__c + Order_bundle_amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Order_Discount__c</fullName>
    <description>Discount for the total amount of the order</description>
    <label>Order Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Order_Link__c</fullName>
    <formula>IF( Country__c ="PT", hyperlink("/email/author/emailauthor.jsp?retURL=/"&amp;Id&amp;"&amp;p3_lkid="&amp;Id&amp;"&amp;rtype=003&amp;p5="&amp;$User.Email&amp;"&amp;template_id=00X0J000002PD7b","Send Quote" ), hyperlink("/email/author/emailauthor.jsp?retURL=/"&amp;Id&amp;"&amp;p3_lkid="&amp;Id&amp;"&amp;rtype=003&amp;p5="&amp;$User.Email&amp;"&amp;template_id=00X0J000002RY5a","Send Quote" ))</formula>
    <label>Order Link</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Missing_Info__c</fullName>
    <label>Order Missing Info</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>VAT Number</fullName>
        </value>
        <value>
          <fullName>Shipping Address</fullName>
        </value>
        <value>
          <fullName>No products in the order</fullName>
        </value>
        <value>
          <fullName>Distributor Name</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_Owner__c</fullName>
    <description>Formula field displaying Order Owner</description>
    <formula>Owner:User.Full_Name__c</formula>
    <label>Order Owner Full Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_SBU__c</fullName>
    <formula>Owner:User.User_SBU__c</formula>
    <label>Order SBU</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Source__c</fullName>
    <description>To track the origin of the order</description>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Customer Visit</fullName>
        </value>
        <value>
          <fullName>Call from customer</fullName>
        </value>
        <value>
          <fullName>Email from customer</fullName>
        </value>
        <value>
          <fullName>Dealer</fullName>
        </value>
        <value>
          <fullName>Order to Dealer's Rep</fullName>
        </value>
        <value>
          <fullName>Webshop</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_Tracking__c</fullName>
    <formula>IMAGE("/servlet/servlet.FileDownload?file=0150J0000045MNP", "Connect to the VPN before tracking",25, 200)&amp;"  |  "
&amp;HYPERLINK("https://www.centiro.com/c3web" , "Click to Track US6 Regen Orders")&amp;"|   "&amp;Hyperlink("http://c3web.astratech.net/", "Click to Track All Other Orders")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>US6 Login Info: Username: track.US6@us.dentsply.com, Password: Trackcentiro1! 
All Other Login Info: Username: track@us.dentsply.com, Password: centiro</inlineHelpText>
    <label>Order Tracking</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Type__c</fullName>
    <description>Order Type for DNA</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Free Goods Order</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Telesales</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Discount on Demand</fullName>
        </value>
        <value>
          <fullName>PREP</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_Type_formula__c</fullName>
    <formula>if( and( Country__c="US",  Free_of_Charge_Order__c =True),"Free Goods Order",   text(Order_Type__c) )</formula>
    <label>Order Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_amount_before_disc_globa__c</fullName>
    <description>Value of the order with discount</description>
    <label>Order Amount before total discount</label>
    <summarizedField>OrderItem.Total_Line_Item_Price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Order_amount_number__c</fullName>
    <formula>TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order amount (number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Order_amount_without_discounts__c</fullName>
    <formula>TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order amount without discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Order_bundle_amount__c</fullName>
    <label>Order bundle amount</label>
    <summarizedField>Order_bundle__c.Total_price__c</summarizedField>
    <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Order_quote_end_date__c</fullName>
    <label>Order quote valid until</label>
    <type>Date</type>
  </fields>
</CustomObject>